--- a/example/lib/intl/l10n/intl_zh.arb
+++ b/example/lib/intl/l10n/intl_zh.arb
@@ -1,6 +1,7 @@
 {
     "setting":"设置",
-    "followSystem":"系统",
+    "followSystem":"跟随系统",
+    "system":"系统",
     "localizations":"简体中文",
     "darkMode":"深色",
     "lightMode":"浅色",
