--- a/example/lib/intl/l10n/intl_zh.arb
+++ b/example/lib/intl/l10n/intl_zh.arb
@@ -7,6 +7,8 @@
     "lightMode":"浅色",
     "settingDarkMode":"深色模式",
     "settingTheme":"主题",
-    "settingLocale":"多语言"
+    "settingLocale":"多语言",
+    "widgets":"小组件",
+    "expandableText": "可折叠文本"
 }
   
